--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,5 +1,7 @@
+/* header CSS */
+
 header {
-    height: 70px;
-    background-color: #FF0000;
-    width: 100%;
+	background-color: #FF0000;
+	height: 70px;
+	width: 100%;
 }
