--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,13 +1,13 @@
-footer {
-    height: 60px;
-    background-color: #00FF00;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-}
+/* footer CSS */
 
-p {
-    text-align: center;
-    padding: 6px;
+footer {
+	background-color: #00FF00;
+	height: 60px;
+	height: 60px;
+	bottom:0;
+  position: absolute;
+  width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center
 }
