--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,13 +1,14 @@
-p {
-    text-align: center;
-    padding: 8px;
-}
+/* footer CSS */
 
 footer {
-    background: #FFFFFF;
-    height: 70px;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    border-top: 1px solid #CCCCCC
+	background-color: white;
+	height: 60px;
+	bottom:0;
+  position: absolute;
+  width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  border-top: 1px solid #CCCCCC;
+  box-sizing: border-box;
 }
