--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,95 +1,89 @@
 .filters {
-    background-color: #FFFFFF;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    text-align: right;
-    display: flex;
-    justify-content: flex-start;
+	position: relative;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+  background-color: white;
 }
 
-button:hover {
-    opacity: 0.9;
+.filters button {
+  font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	border-radius: 4px;
+	height: 48px;
+	width: 20%;
+	right: 30px;
+	top: 0.688rem;
+  position: absolute;
+	display: inline-block;
+  border: none;
 }
 
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-    order: 0;
-    text-align: left;
-    margin-left: 40px;
-    position: relative;
+.filters ul {
+	list-style: none;
 }
 
-.amenities {
-    height: 100%;
-    width: 25%;
-    order: 1;
-    text-align: left;
-    margin-left: 40px;
+.amenities, .locations {
+	display: inline-block;
+	height: 100%;
+	width: 25%;
 }
 
-button {
-    font-size: 18px;
-    background-color: #FF5A4F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-radius: 4px;
-    border-style: none;
-    margin-top: 10px;
-    margin-right: 30px;
-    margin-left: auto;
-    order: 2;
+.filters > .locations {
+	border-right: 1px solid #DDDDDD;
 }
 
-.amenities h3,
-.locations h3 {
-    font-weight: 600;
-    margin: 12px 0;
+.locations h3, .amenities h3 {
+	font-weight: 600;
 }
 
-.amenities h4,
-.locations h4 {
-    font-weight: 400;
-    font-size: 12px;
-    margin: 0 auto;
+.locations h4, .amenities h4 {
+	font-weight: 400;
+	font-size: 14px;
 }
 
-.popover {
-    display: none;
-    background-color: #FAFAFA;
-    width: 292px;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    margin-left: -41px;
-    margin-top: 13px;
-    box-sizing: border-box;
+.locations h3,
+.locations h4, 
+.amenities h3, 
+.amenities h4 {
+	margin: 0;
+	margin-top: 0.625rem;
+	margin-left: 2.5rem;
 }
 
 .popover li {
-    list-style-type: none;
+	margin-top: 0.313rem;
 }
 
 .popover h2 {
-    margin-bottom: 5px;
+	font-size: 16px;
+	margin: 0;
+	margin-top: 0.688rem;
 }
 
-.popover ul {
-    margin-top: 5px;
+.locations .popover,
+.amenities .popover {
+	margin: 0;
+	display: none;
+	position: absolute;
+	background-color: #FAFAFA;
+	width: 25%;
+	top: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
 }
 
-.locations .popover ul {
-    padding-left: 20px;
+.locations .popover {
+	left: -0.063rem;
 }
 
-.locations:hover .popover {
-    display: block;
-    padding-left: 18px;
+.amenities .popover {
+	left: 25%;
 }
 
+.locations:hover .popover,
 .amenities:hover .popover {
-    display: block;
+	display: block;
 }
