--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,7 +1,3 @@
-/* header CSS */
-
-header {
-	background-color: #FF0000;
-	height: 70px;
-	width: 100%;
+header{
+    background-color: #FF0000; height: 70px;width:100%;
 }
