--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,98 +1,92 @@
 .places {
-	padding-top: 0.313rem;
-  margin: 1.25rem;
+  margin-bottom: 60px;
 }
-
+.boxes {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+}
 .places h1 {
-	text-align: left;
-	font-size: 30px;
+  font-size: 30px;
+  vertical-align: top;
+  text-align: left;
+  padding: 10px 15px;
 }
 
-.places article
-{
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-	display: inline-block;
-}
-
-.places article h2 {
-	font-size: 30px;
-	text-align: center;
-  top: 50%;
-	left: 50%;
+.places article {
+  width: 390px;
+  padding: 20px;
+  margin: 20px;
+  border: #ff5a5f solid 1px;
+  border-radius: 4px;
+  display: inline-block;
   position: relative;
-	display: inline-block;
-  transform: translate(-50%, -50%);
 }
 
-.price_by_night {
-	position: relative;
-	color: #FF5A5F;
-	border: 4px solid #FF5A5F;
-	border-radius: 50%;
-	min-width: 60px;
-	height: 60px;
-	font-size: 30px;
-	padding: 10px;
-	right: 0;
-	top: 0;
-	float: right;
+.places h2 {
+  font-size: 30px;
+  text-align: center;
 }
-.price_by_night p{
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+
+.places .price_by_night {
+  color: #ff5a5f;
+  border: #ff5a5f solid 4px;
+  border-radius: 50%;
+  min-width: 60px;
+  height: 60px;
+  font-size: 30px;
+  right: 5%;
+  top: 5%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .information {
-	padding-top: 10px;
-	margin-top: 10px;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	height: 80px;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-	text-align: center;
+    height: 80px;
+    border-top: #DDDDDD solid 1px;
+    border-bottom: #DDDDDD solid 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-	position: relative;
-	width: 100px;
-	height: 100%;
-	display: inline-block;
+.max_guest,
+.number_rooms,
+.number_bathrooms {
+    width: 100px;
 }
 
-.max_guest span, .number_rooms span, .number_bathrooms span {
-	position: absolute;
-	padding-top: 65px;
-	display: block;
-	float: none;
-	clear: both;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	white-space: nowrap;
+.max_guest p,
+.number_rooms p,
+.number_bathrooms p{
+    margin: 0;
 }
 
-.information .max_guest {
-	background: url('../images/icon_group.png') center center no-repeat;
+.img1 {
+    background-image: url("../images/icon_group.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50px;
 }
 
-.information .number_rooms {
-	background: url('../images/icon_bed.png') center center no-repeat;
+.img2 {
+    background-image: url("../images/icon_bed.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50px;
 }
 
-.information .number_bathrooms {
-	background: url('../images/icon_bath.png') center center no-repeat;
+.img3 {
+    background-image: url("../images/icon_bath.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50px;
 }
 
 .user {
-	padding-top: 10px;
-	padding-bottom: 10px;
+    text-align: initial;
+    padding: 10px 0;
 }
