--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,14 @@
-footer{
-    height: 60px; width: 100%;
-    background: white;
-    border-top: 1px solid #CCCCCC;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center
+/* footer CSS */
+
+footer {
+	background-color: white;
+	height: 60px;
+	bottom:0;
+  position: absolute;
+  width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  border-top: 1px solid #CCCCCC;
+  box-sizing: border-box;
 }
