--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,10 +1,9 @@
+/* header CSS */
+
 header {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
-    background-image: url("../images/logo.png");
-    background-repeat: no-repeat;
-    background-position-x: 20px;
-    background-position-y: center;
+	height: 70px;
+	width: 100%;
+  background-color: white;
+  border-bottom: 1px solid #CCCCCC;
+  background: url("../images/logo.png") no-repeat;
 }
