--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,50 +1,49 @@
+/* filters CSS */
+
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    margin-left: auto;
-    margin-right: 30px;
+  font-size: 18px;
+  background-color: #FF5A5F;
+  color: #FFFFFF;
+  height: 48px;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  margin-right: 30px;
+  margin-left: auto;
+  outline: none;
 }
 
-.filters button:hover {
-    opacity: 0.9;
+.locations, .amenities {
+  height: 100%;
+  width: 25%;
+  /* outline: 1px solid green !important; */
+  margin-left: 2.5rem;
 }
 
-.filters .locations{
-    height: 100%;
-    width: 25%;
-    border-right: #DDDDDD solid 1px;
-    margin-left: 30px;
+.locations {
+  border-right: 1px solid #DDDDDD;
 }
 
-.filters .amenities {
-    height: 100%;
-    width: 25%;
-    margin-left: 30px;
+.locations h3, .amenities h3 {
+  font-weight: 600;
+  margin-bottom: 0.1rem;
+  /* outline: 1px solid green !important; */
 }
 
-.filters locations .filters amenities h3 {
-    font-weight: 600;
-    margin-bottom: 0px;
-}
-
-h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0px;
+.locations h4, .amenities h4 {
+  font-weight: 400;
+  font-size: 14px;
+  margin: 0;
+  /* outline: 1px solid green !important; */
 }
