--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,84 +1,89 @@
 .filters {
+	position: relative;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
   background-color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
 }
 
 .filters button {
   font-size: 18px;
-  background-color: #ff5a5f;
-  color: #ffffff;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-left: auto;
-  margin-right: 30px;
-}
-
-.filters button:hover {
-  opacity: 0.9;
-}
-
-.filters .locations {
-  border-right: #dddddd solid 1px;
-}
-
-.filters .locations,
-.filters .amenities {
-  height: 100%;
-  width: 25%;
-  position: relative;
-  z-index: 1;
-}
-
-.filters .locations h3,
-.filters .amenities h3 {
-  font-weight: 600;
-  margin: 0;
-  padding: 17px 30px 0 30px;
-}
-
-.filters .locations h4,
-.filters .amenities h4 {
-  font-weight: 400;
-  font-size: 14px;
-  margin-top: 0;
-  padding-left: 30px;
-}
-
-.popover h2 {
-  font-size: 16px;
-  margin: 0;
-  padding: 10px 0px 0px 30px;
-}
-
-.popover {
-  background: #FAFAFA;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: none;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	border-radius: 4px;
+	height: 48px;
+	width: 20%;
+	right: 30px;
+	top: 0.688rem;
   position: absolute;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.filters .locations:hover .popover,
-.filters .amenities:hover .popover {
-  display: block;
+	display: inline-block;
+  border: none;
 }
 
 .filters ul {
-  list-style: none;
-  margin: 0;
+	list-style: none;
+}
+
+.amenities, .locations {
+	display: inline-block;
+	height: 100%;
+	width: 25%;
+}
+
+.filters > .locations {
+	border-right: 1px solid #DDDDDD;
+}
+
+.locations h3, .amenities h3 {
+	font-weight: 600;
+}
+
+.locations h4, .amenities h4 {
+	font-weight: 400;
+	font-size: 14px;
+}
+
+.locations h3,
+.locations h4, 
+.amenities h3, 
+.amenities h4 {
+	margin: 0;
+	margin-top: 0.625rem;
+	margin-left: 2.5rem;
 }
 
 .popover li {
-  margin: 12px;
+	margin-top: 0.313rem;
+}
+
+.popover h2 {
+	font-size: 16px;
+	margin: 0;
+	margin-top: 0.688rem;
+}
+
+.locations .popover,
+.amenities .popover {
+	margin: 0;
+	display: none;
+	position: absolute;
+	background-color: #FAFAFA;
+	width: 25%;
+	top: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+}
+
+.locations .popover {
+	left: -0.063rem;
+}
+
+.amenities .popover {
+	left: 25%;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+	display: block;
 }
