--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,27 +1,24 @@
 .places {
-    text-align: center;
-    margin: 0;
+	padding-top: 0.313rem;
+  margin: 1.25rem;
 }
+
 .places h1 {
-    font-size: 30px;
-    vertical-align: top;
-    text-align: left;
-    padding: 25px 0 0 30px;
-    margin: 0;
+	text-align: left;
+	font-size: 30px;
 }
 
-.places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: #FF5A5F solid 1px;
-    border-radius: 4px;
-    display: inline-block;
-    position: relative;
-
+.places article
+{
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	display: inline-block;
 }
 
-.places h2 {
-    font-size: 30px;
-    text-align: center;
+.places article h2 {
+	font-size: 30px;
+	text-align: center;
 }
