--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,92 +1,98 @@
 .places {
-  margin-bottom: 60px;
+	padding-top: 0.313rem;
+  margin: 1.25rem;
 }
-.boxes {
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    flex-wrap: wrap;
-}
+
 .places h1 {
-  font-size: 30px;
-  vertical-align: top;
-  text-align: left;
-  padding: 10px 15px;
+	text-align: left;
+	font-size: 30px;
 }
 
-.places article {
-  width: 390px;
-  padding: 20px;
-  margin: 20px;
-  border: #ff5a5f solid 1px;
-  border-radius: 4px;
-  display: inline-block;
+.places article
+{
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	display: inline-block;
+}
+
+.places article h2 {
+	font-size: 30px;
+	text-align: center;
+  top: 50%;
+	left: 50%;
   position: relative;
+	display: inline-block;
+  transform: translate(-50%, -50%);
 }
 
-.places h2 {
-  font-size: 30px;
-  text-align: center;
+.price_by_night {
+	position: relative;
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 50%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 30px;
+	padding: 10px;
+	right: 0;
+	top: 0;
+	float: right;
 }
-
-.places .price_by_night {
-  color: #ff5a5f;
-  border: #ff5a5f solid 4px;
-  border-radius: 50%;
-  min-width: 60px;
-  height: 60px;
-  font-size: 30px;
-  right: 5%;
-  top: 5%;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.price_by_night p{
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .information {
-    height: 80px;
-    border-top: #DDDDDD solid 1px;
-    border-bottom: #DDDDDD solid 1px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	padding-top: 10px;
+	margin-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	height: 80px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	text-align: center;
 }
 
-.max_guest,
-.number_rooms,
-.number_bathrooms {
-    width: 100px;
+.max_guest, .number_rooms, .number_bathrooms {
+	position: relative;
+	width: 100px;
+	height: 100%;
+	display: inline-block;
 }
 
-.max_guest p,
-.number_rooms p,
-.number_bathrooms p{
-    margin: 0;
+.max_guest span, .number_rooms span, .number_bathrooms span {
+	position: absolute;
+	padding-top: 65px;
+	display: block;
+	float: none;
+	clear: both;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	white-space: nowrap;
 }
 
-.img1 {
-    background-image: url("../images/icon_group.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 50px;
+.information .max_guest {
+	background: url('../images/icon_group.png') center center no-repeat;
 }
 
-.img2 {
-    background-image: url("../images/icon_bed.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 50px;
+.information .number_rooms {
+	background: url('../images/icon_bed.png') center center no-repeat;
 }
 
-.img3 {
-    background-image: url("../images/icon_bath.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 50px;
+.information .number_bathrooms {
+	background: url('../images/icon_bath.png') center center no-repeat;
 }
 
 .user {
-    text-align: initial;
-    padding: 10px 0;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
