--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,25 +1,24 @@
-/* filters CSS */
-
 .filters {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+    color: #fff;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
 }
 
-.filters button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-right: 30px;
-  margin-left: auto;
-  outline: none;
+button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border-radius: 4px;
+    border-style: none;
+    margin-top: 10px;
+    margin-right: 30px;
+}
+
+button:hover {
+    opacity: 0.9;
 }
