--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,49 +1,58 @@
-/* filters CSS */
-
 .filters {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+    background-color: #FFFFFF;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
+    display: flex;
+    justify-content: flex-start;
 }
 
-.filters button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-right: 30px;
-  margin-left: auto;
-  outline: none;
+button {
+    font-size: 18px;
+    background-color: #FF5A4F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border-radius: 4px;
+    border-style: none;
+    margin-top: 10px;
+    margin-right: 30px;
+    margin-left: auto;
+    order: 2;
 }
 
-.locations, .amenities {
-  height: 100%;
-  width: 25%;
-  /* outline: 1px solid green !important; */
-  margin-left: 2.5rem;
+button:hover {
+    opacity: 0.9;
 }
 
 .locations {
-  border-right: 1px solid #DDDDDD;
+    height: 100%;
+    width: 25%;
+    border-right: 1px solid #DDDDDD;
+    order: 0;
+    text-align: left;
+    margin-left: 40px;
 }
 
-.locations h3, .amenities h3 {
-  font-weight: 600;
-  margin-bottom: 0.1rem;
-  /* outline: 1px solid green !important; */
+.amenities {
+    height: 100%;
+    width: 25%;
+    order: 1;
+    text-align: left;
+    margin-left: 40px;
 }
 
-.locations h4, .amenities h4 {
-  font-weight: 400;
-  font-size: 14px;
-  margin: 0;
-  /* outline: 1px solid green !important; */
+.amenities h3,
+.locations h3 {
+    font-weight: 600;
+    margin: 12px 0;
+}
+
+.amenities h4,
+.locations h4 {
+    font-weight: 400;
+    font-size: 12px;
+    margin: 0 auto;
 }
