--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,98 +1,97 @@
 .places {
-	padding-top: 0.313rem;
-  margin: 1.25rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
 
 .places h1 {
-	text-align: left;
-	font-size: 30px;
+    text-align: left;
+    font-size: 30px;
+    display: block;
+    flex-grow: 2;
+    width: 100%;
+    margin-left: 1em;
 }
 
-.places article
-{
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-	display: inline-block;
+.places article {
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .places article h2 {
-	font-size: 30px;
-	text-align: center;
-  top: 50%;
-	left: 50%;
-  position: relative;
-	display: inline-block;
-  transform: translate(-50%, -50%);
+    font-size: 30px;
+    text-align: center;
+    margin-top: 0.175em;
+    margin-right: 2em;
+    margin-left: 2.2em;
+    padding-left: 1em;
 }
 
-.price_by_night {
-	position: relative;
-	color: #FF5A5F;
-	border: 4px solid #FF5A5F;
-	border-radius: 50%;
-	min-width: 60px;
-	height: 60px;
-	font-size: 30px;
-	padding: 10px;
-	right: 0;
-	top: 0;
-	float: right;
-}
-.price_by_night p{
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+.places article .price_by_night {
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
+    min-width: 60px;
+    height: 60px;
+    font-size: 30px;
+    margin-top: -0.3em;
+    position: absolute;
+    margin-left: 10.5em;
 }
 
-.information {
-	padding-top: 10px;
-	margin-top: 10px;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	height: 80px;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-	text-align: center;
+.places article .price_by_night p {
+    margin: 0 auto;
+    padding-top: 0.4em;
+    padding-left: 0.2em;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-	position: relative;
-	width: 100px;
-	height: 100%;
-	display: inline-block;
+.places article .information {
+    height: 80px;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    flex: 1 0 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
-.max_guest span, .number_rooms span, .number_bathrooms span {
-	position: absolute;
-	padding-top: 65px;
-	display: block;
-	float: none;
-	clear: both;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	white-space: nowrap;
+.places article .max_guest {
+    background: url("../images/icon_group.png") no-repeat;
+    margin-top: 0.5em;
+    width: 100px;
+    margin-left: 2.5em;
 }
 
-.information .max_guest {
-	background: url('../images/icon_group.png') center center no-repeat;
+.places article .number_rooms {
+    background: url("../images/icon_bed.png") no-repeat;
+    margin-top: 0.5em;
+    width: 100px;
+    margin-left: 2.5em;
 }
 
-.information .number_rooms {
-	background: url('../images/icon_bed.png') center center no-repeat;
+.places article .number_bathrooms {
+    background: url("../images/icon_bath.png") no-repeat;
+    margin-top: 0.5em;
+    width: 100px;
+    margin-left: 2.5em;
 }
 
-.information .number_bathrooms {
-	background: url('../images/icon_bath.png') center center no-repeat;
+.places article .information p {
+    margin-top: 2.7em;
+    margin-left: -3.5em;
 }
 
-.user {
-	padding-top: 10px;
-	padding-bottom: 10px;
+.places article .user {
+    margin-top: 1em;
+    flex: 1 0 100%;
+}
+
+.places article .description p {
+    padding-left: 0;
+    margin-top: 0;
+    text-align: left;
 }
